# template

./: .eslintrc.json  README.md  package.json
.github/workflows/: ctest.yaml  javatest.yaml  jstest.yaml  pytest.yaml
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  main.cpp  main.h  main.py  test.java  test.py
src/main/java/com/example/: Main.java
src/tests/: __init__.py  main_test.cpp  main_test.js  main_test.py
src/tests/java/com/example/: MainTest.java
